Safari layout bug?

--- a/css/base/button.css
+++ b/css/base/button.css
@@ -59,7 +59,6 @@
 
     .button-icon {
         height: var(--button-icon-size);
-        width: auto;
         flex: none;
         color: inherit;
     }
